# downloader

./: .gitignore  DOCUMENTATION.md  README.md  api.py  cli.py  pyproject.toml  subtitle_extractor.py
tests/: test_subtitle_extractor.py
